@startuml uc023-class-diagram

skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype ortho

left to right direction
top to bottom direction

title Class Diagram (CD) - UC023

class OperationTypeController {
    +GetAll(): Task<ActionResult<IEnumerable<OperationTypeDto>>>
    +GetByName(name: Name): Task<ActionResult<OperationTypeDto>>
    +GetBySpecialization(specialization: Specialization): Task<ActionResult<IEnumerable<OperationTypeDto>>>
    +GetByStatus(status: bool): Task<ActionResult<IEnumerable<OperationTypeDto>>>
}

class OperationTypeService {
    +GetAllAsync(): Task<List<OperationTypeDto>>
    +GetByNameAsync(name: Name): Task<OperationTypeDto>
    +GetBySpecializationAsync(specialization: Specialization): Task<List<OperationTypeDto>>
    +GetByStatusAsync(status: bool): Task<List<OperationTypeDto>>
}

class OperationTypeRepository {
    +GetAllAsync(): Task<List<OperationType>>
    +GetByNameAsync(name: Name): Task<OperationType>
    +GetBySpecializationAsync(specialization: Specialization): Task<List<OperationType>>
    +GetByStatusAsync(status: bool): Task<List<OperationType>>
}

interface IOperationTypeRepository {
    +GetAllAsync(): Task<List<OperationType>>
    +GetByNameAsync(name: Name): Task<OperationType>
    +GetBySpecializationAsync(specialization: Specialization): Task<List<OperationType>>
    +GetByStatusAsync(status: bool): Task<List<OperationType>>
}

class OperationType {
    +Id: OperationTypeID
    +Name: Name
    +Status: bool
    +Specialization: Specialization
    +RequiredStaff: List<RequiredStaff>
    +PhasesDuration: PhasesDuration
    +ChangeName(name: Name): void
    +ChangeStatus(status: bool): void
    +ChangeSpecialization(specialization: Specialization): void
    +ChangeRequiredStaff(requiredStaff: List<RequiredStaff>): void
    +ChangePhasesDuration(phasesDuration: PhasesDuration): void
}

class OperationTypeDto {
    +Id: OperationTypeID
    +Name: Name
    +Status: bool
    +Specialization: Specialization
    +RequiredStaff: List<RequiredStaff>
    +PhasesDuration: PhasesDuration
}

class RequiredStaff {
    +Role: Role
    +Specialization: Specialization
    +Quantity: Quantity
}
note right of RequiredStaff
    Role can only be a staff role: Doctor, Nurse or Assistant
end note

class Quantity {
    +Quantity: int
}
note right of Quantity
    Quantity must be greater than 0
end note

class Specialization {
    +Designation: Designation
}

class PhasesDuration {
    - _phases: Dictionary<Phase, Duration>
}

enum Phase {
    PREPARATION, SURGERY, CLEANING
}

class Duration {
    +Minutes: int
}

class Name {
    +Name: string
}

class OperationTypeID {
    +Id: Guid
}

enum Role {
    ADMIN, DOCTOR, NURSE, TECHNICIAN, PATIENT
}

OperationTypeController .> OperationTypeService : > uses
OperationTypeController ----> OperationTypeDto : > returns

OperationTypeService -> OperationTypeRepository : > uses
OperationTypeService ---> OperationType : > updates
OperationTypeService ---> OperationTypeDto : > creates

OperationTypeRepository --> IOperationTypeRepository : > implements
OperationTypeRepository --> OperationType : > saves in database

OperationType --> OperationTypeID : > has
OperationType --> Name : > has
OperationType --> Specialization : > has
OperationType --> RequiredStaff : > has
OperationType --> PhasesDuration : > has

OperationTypeDto --> OperationTypeID : > has
OperationTypeDto --> Name : > has
OperationTypeDto --> Specialization : > has
OperationTypeDto --> RequiredStaff : > has several
OperationTypeDto --> PhasesDuration : > has

RequiredStaff --> Role: has
RequiredStaff --> Specialization : > has
RequiredStaff --> Quantity : > has

PhasesDuration --> Phase : > has
PhasesDuration --> Duration : > has

@enduml